--- a/pom.xml
+++ b/pom.xml
@@ -36,5 +36,12 @@
 			<artifactId>cglib</artifactId>
 			<version>3.2.4</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.47</version>
+		</dependency>
+
 	</dependencies>
 </project>
